--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,12 +1,118 @@
-h1 {
-    color: #27aedb;
-    text-align: center;
-    }
-    
+body {
+  background: #f8faff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  color: #102a42;
+}
 
-button{
-    color: #27aedb;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+#main {
+  padding: 5rem 0;
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.title h2 {
+  font-size: 2.5rem;
+  letter-spacing: 2px;
+  color: #102a42;
+  margin-bottom: 0.5rem;
+}
+
+.underline {
+  width: 5rem;
+  height: 0.25rem;
+  background: #c59d5f;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn-container {
+  margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.filter-btn {
+  background: transparent;
+  border-color: transparent;
+  font-size: 1rem;
+  text-transform: capitalize;
+  margin: 0 0.5rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  color: #c59d5f;
+  cursor: pointer;
+  transition: all 0.3s linear;
+  border-radius: 0.25rem;
+}
+
+.filter-btn:hover {
+  background: #c59d5f;
+  color: #fff;
+}
+
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  gap: 3rem 2rem;
+  justify-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-center {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.menu-item {
+  display: grid;
+  gap: 1rem 2rem;
+  max-width: 40rem;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-item {
+    grid-template-columns: 225px 1fr;
+  }
+}
+
+.photo {
+  object-fit: cover;
+  height: 175px;
+  width: 100%;
+  border: 0.25rem solid #c59d5f;
+  border-radius: 0.25rem;
+  display: block;
+}
+
+.item-info header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.5px solid #858585;
+  padding-bottom: 0.5rem;
+}
+
+.item-info h4 {
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.price {
+  color: #c59d5f;
+}
+
+.item-text {
+  margin-bottom: 0;
+  padding-top: 1rem;
+  color: #617d98;
+  line-height: 1.5;
 }
